# ez-transcript

./: .gitignore  README.md  pyproject.toml  requirements.txt  start.bat  start.sh
backend/: file_handler.py  gpu_utils.py  main.py  transcriber.py
frontend/: app.js  index.html  style.css
frontend/lib/: wavesurfer.esm.js
