[project]
name = "ez-transcript"
version = "1.0.0"
description = "Interface web de transcription locale par IA — 100% privé, zéro cloud"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "faster-whisper>=1.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"
